# SNPECam

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/davidchiu/snpecam/: AssetUtils.java  AutoFitTextureView.java  BorderedText.java  CameraActivity.java  CameraConnectionFragment.java  Detection.java  DetectorActivity.java  ImageUtils.java  LegacyCameraConnectionFragment.java  Logger.java  Ncnn.java  OverlayView.java  SNPENet.java  Size.java  SplitTimer.java
app/src/main/jni/: CMakeLists.txt  imageutils_jni.cc  yuv2rgb.cc
app/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml  camera_connection_fragment_tracking.xml
app/src/main/res/values/: strings.xml
